tentando consertar o bug da scrollbar

--- a/style.css
+++ b/style.css
@@ -13,20 +13,15 @@
     background-image: linear-gradient(to bottom left, #8252f3 , #6326f1);
 
 }
-/* rainbow scrollPage */
-section
-{
-    padding: 50px;
-    
-    
 
-}
-/* {start} parte para deixar a barra colorida */
+/* {start} parte para deixar a scrollbar colorida */
 ::-webkit-scrollbar
 {
     width: 0;
 }
-#scrollPath
+
+
+ #scrollPath 
 {
     position: fixed;
     top: 0;
@@ -35,15 +30,20 @@ section
     height: 100%;
     background: rgba(255, 255, 255, 0.05);
 }
+
+
+
 #propressbar
 {
     position: fixed;
     top: 0;
     right: 0;
     width: 10px;
+    height: 100%;
     background: linear-gradient(to top, #008aff,#00ffe7);
     animation: animate 5s linear infinite;
 }
+
 @keyframes animate
 {
     0%,100%
@@ -52,22 +52,21 @@ section
     }
     50%
     {
-        filter: hue-rotate(360deg);
+        filter: hue-rotate(150deg);
     }
 
 }
-#propressbar:before
+#propressbar::before
 {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     background: linear-gradient(to top, #008aff,#00ffe7);
     filter: blur(10px);
 }
-#propressbar:after
+#propressbar::after
 {
     content: '';
     position: absolute;
@@ -78,4 +77,33 @@ section
     background: linear-gradient(to top, #008aff,#00ffe7);
     filter: blur(30px);
 }
-/* {end} parte para deixar a barra colorida */
+/* {end} parte para deixar a scrollbar colorida */
+#title
+{
+    font-size: 55px;
+    font-family:'Times New Roman';
+    text-shadow: rgb(65, 65, 66);
+    color: black;
+    text-align: center;
+    padding-top: 5em;
+    justify-content: center;
+    display: flex;
+
+}
+#subtitle
+{
+    font-size: larger;
+    font-family: Georgia;
+    text-shadow: rgb(65, 65, 66);
+    color: black;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+}
+#copy
+{
+    text-align: center;
+    padding-top: 500em;
+    justify-content: center;
+    display: flex;
+}
